src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "vendor/semantic.min.css";

.segment {
    
    transition: all 2.6s cubic-bezier(0.075, 0.82, 0.165, 1);
    
}

.segment:hover {
    
    box-shadow: 0 4px 8px 0 rgba(34,36,38,.12), 0 2px 10px 0 rgba(34,36,38,.08)
}


/* tweakings of the semantic UI START*/

/* screen size tweakings for editor and sidebar */

@media only screen and (max-width: 1467px) {
    #options-dropdownbutton{
        padding: .78571429em 0.4em !important; 
      }

}

@media (max-width: 1467px) and (min-width: 1246px) {
    #accountButtonText{
        padding-left:10px
    }
}


@media only screen and (min-width: 2200px) {
    .ui.column.grid>[class*="six wide"].column, .ui.grid>.column.row>[class*="six wide"].column, .ui.grid>.row>[class*="six wide"].column, .ui.grid>[class*="six wide"].column {
        width: 25%!important;
    } 

    #copy_btn {
        display: inline-block !important;
    }

    .ui.column.grid>[class*="ten wide"].column, .ui.grid>.column.row>[class*="ten wide"].column, .ui.grid>.row>[class*="ten wide"].column, .ui.grid>[class*="ten wide"].column {
        width: 75%!important;
    }

}

@media only screen and (min-width: 2000px) {
    .ui.column.grid>[class*="six wide"].column, .ui.grid>.column.row>[class*="six wide"].column, .ui.grid>.row>[class*="six wide"].column, .ui.grid>[class*="six wide"].column {
        width: 30%;
    } 

    #copy_btn {
        display: inline-block !important;
    }

    #options-dropdownbutton{
      padding: .78571429em 0.4em; 
    }

    .ui.column.grid>[class*="ten wide"].column, .ui.grid>.column.row>[class*="ten wide"].column, .ui.grid>.row>[class*="ten wide"].column, .ui.grid>[class*="ten wide"].column {
        width: 70%;
    }

}

@media only screen and (min-width: 1661px) {

    #copy_btn {
        display: inline-block !important;
    }

    #options-dropdownbutton{
        padding: .78571429em 1.5em !important; 
      }
}

@media only screen and (min-width: 768px) {
    .ui.column.grid>[class*="six wide"].column, .ui.grid>.column.row>[class*="six wide"].column, .ui.grid>.row>[class*="six wide"].column, .ui.grid>[class*="six wide"].column {
        width: 37.5%;
    } 

    .ui.column.grid>[class*="ten wide"].column, .ui.grid>.column.row>[class*="ten wide"].column, .ui.grid>.row>[class*="ten wide"].column, .ui.grid>[class*="ten wide"].column {
        width: 62.5%;
    }

}

/*This one: Make buttons look correct when no warning sign */
.collapsedForIcon {
    padding-right: 1.5em!important;
    padding-left: 1.5em!important;
}

.expandedForIcon{
    padding-right: 4.07142857em!important
}

.expandedForIcon p{
    margin-bottom: 0px;
    margin-right: 20px;
}

.contractCallButton i{

    background-color:#898b8b !important;
    opacity: 1 !important;
    margin-bottom: 0 !important;
    margin-right: 20px;
}

/* value, gas, gasPrice tabs start*/
/* inactive  */
overlay:after{
position:absolute;
height: 100%;
width:100%;
content:'';
z-index:5; /* Make sure this value is higher than the z-index of the  .form class  */
top:0;
left:0;

border: 1px solid #ccc!important;
border-color: #000!important;
    border-top-color: rgb(0, 0, 0) !important;
    border-right-color: rgb(0, 0, 0) !important;
    border-bottom-color: rgb(0, 0, 0) !important;
    border-left-color: rgb(0, 0, 0) !important;
}

.ui.secondary.pointing.menu .active.item {
    border-color: #FF2D55;
}

.ui.secondary.pointing.menu a.item:active {
    border-color: #d22748;
}

.ui.secondary.pointing.menu .item:hover {
    border-color: #d22748;
    color: rgba(0,0,0,1)
}

.ui.secondary.pointing.menu .active.item:hover {
    border-color: #d22748;
}

.ui.primary.button {
    background-color: #D12754;
    color: #FFF;
    text-shadow: none;
    background-image: none;
}

.ui.primary.active.button {
    background-color: #FF2D55;
    color: #FFF;
    text-shadow: none;
    background-image: none;
}
.ui.primary.button:focus {
    background-color: #d22748;
    color: #FFF;
    text-shadow: none;
    background-image: none;
}

.ui.primary.button:hover {
    background-color: #d22748;
    color: #FFF;
    text-shadow: none;
    background-image: none;
}
#txvalueButton {
    width: 130px !important
}

.ui.slider.checkbox input:checked~label {
    background-color: #D12754 !important;
}

.ui.slider.checkbox input:checked~label {
    color: #D12754!important;
}

/* value, gas, gasPrice tabs end*/

.noSideSpace {
    margin-left: 0px !important;
    padding-left: 0px !important;
    margin-right: 0px !important;
    padding-right: 0px !important;
}

/* eliminate white space when shrinking the screen */
@media only screen and (max-width: 1199px) and (min-width: 992px){
    .ui.grid.container{
        width:auto !important;
    }
}
/* eliminate white space when shrinking the screen even further */
@media only screen and (max-width: 991px) and (min-width: 768px){
    .ui.grid.container {
        width: auto !important;
    }
}

/* Give logs the right colouring */
.greyHoverWhite{
    display: inline; 
    color: #d4d4d4 !important
}

.greyHoverWhite:hover{
    display: inline; 
    color: white !important
}

.greyHoverWhite a{
    display: inline; 
    color: #d4d4d4 !important
}

.greyHoverWhite:hover a{
    display: inline; 
    color: white;
}

/* font color of a title in the event log*/
.theLogs .title{
    color: #d4d4d4 !important;
} 

/* line padding of nested foldable log entry */

.oneLogChild .title {
    padding: 0 !important;
}

/* don't apply usual titel hover effect on contract sidemenu on the left */

.contractInLeftMenu :hover
{
    background: #1a1b1e !important;
}

.pointer {
    cursor: pointer;
}

/* tweakings of the semantic UI END*/

/* scheiß monaco editor container height */
.accordion .content {
    height: 300px;
}
.log-monitor .container {
    height: 300px;
}
.editor {
    display: flex !important;
    /* height: 80vh !important; */
    margin-bottom: -1px;
}
/* ... */

